--- a/themes/hugobricks/static/css/base.css
+++ b/themes/hugobricks/static/css/base.css
@@ -12,7 +12,7 @@ img {filter: grayscale(100%);}
 
 * {padding: 0; margin: 0; box-sizing: border-box;}
 html {font-size: clamp(14px, 2vw, 16px); line-height: 1.7; height: 100%; scroll-behavior: smooth; background: var(--light); scroll-padding-top: 10rem;}
-body {font-size: 1rem; background: var(--light);}
+body {font-size: 1.3rem; background: var(--light);}
 .innerbody {margin: 0 auto; background: white;}
 .innerbody, .innerbody header {max-width: 100%;}
 .container {margin: 0 auto; max-width: 84rem; padding: 0 clamp(1rem,4vw,3rem);}
@@ -68,7 +68,7 @@ h1, h2, a.logo {font-family: var(--fontTitles);}
 /* logo
 /*------------------------*/
 
-a.logo {font-size: 1.8rem; font-weight: bold; text-decoration: none; color: var(--textDark);}
+a.logo {font-size: 1.8rem; font-weight: normal; text-decoration: none; color: var(--textDark);}
 a.logo img {height: 3rem;}
 a.logo img.inline {height: 2rem;}
 a.logo > div {display: flex; gap: 0.8rem; align-items: center;}
