--- a/themes/hugobricks/layouts/_default/baseof.html
+++ b/themes/hugobricks/layouts/_default/baseof.html
@@ -61,6 +61,17 @@
                   {{ end }}
                 </li>
               {{ end }}
+              {{- if gt (len .Site.Languages) 1 -}}
+                <li class="haschildren languages">
+                  <!-- <a href="/{{ .Site.Language.Lang }}/" onclick="navClick(event, this);">{{ .Site.Language.Lang | upper }}</a> -->
+                  <a href="#" onclick="navClick(event, this);">Other Editions</a>
+                  <ul>
+                      {{ range .Site.Languages }}
+                      {{ if ne .Lang $.Site.Language.Lang }}<li><a href="/{{ .Lang }}/">{{ .LanguageName }}</a></li>{{ end }}
+                      {{ end }}
+                  </ul>
+                </li>
+              {{- end -}}
             </ul>
           </nav>
         </div>
@@ -74,20 +85,6 @@
           <a href="/search">
             <img src="/img/search.svg" alt="Search icon" class="black_2_textDark" />
           </a>
-          {{- if gt (len .Site.Languages) 1 -}}
-          <div class="navnav languages">
-            <ul>
-              <li class="haschildren">
-                <a href="/{{ .Site.Language.Lang }}/">{{ .Site.Language.Lang | upper }}</a>
-                <ul>
-					{{ range .Site.Languages }}
-					{{ if ne .Lang $.Site.Language.Lang }}<li><a href="/{{ .Lang }}/">{{ .LanguageName }}</a></li>{{ end }}
-					{{ end }}
-                </ul>
-              </li>
-            </ul>
-          </div>
-          {{- end -}}
           {{ if (index .Site.Data .Language.Lang).header.cta.active }}
           <a href="{{ (index .Site.Data .Language.Lang).header.cta.link }}" class="button smaller">{{ (index .Site.Data .Language.Lang).header.cta.title }}</a>
 		      {{ end }}
@@ -141,11 +138,11 @@
       <div>
         <div class="container">
 		      <div>{{ markdownify (index .Site.Data .Language.Lang).footer.footer_text }}</div>
-          {{- if gt (len .Site.Languages) 1 -}}
+          <!-- {{- if gt (len .Site.Languages) 1 -}}
           <div>
             <select aria-label="Change language" onchange="if(this.value) document.location.href = '/'+this.value+'/';"><option>Change language</option>{{ range .Site.Languages }}<option value="{{ .Lang }}" {{ if eq page.Language.Lang .Lang }}disabled{{ end }}>{{ .LanguageName }}</option>{{ end }}</select></div>
           </div>
-          {{- end -}}
+          {{- end -}} -->
 		    </div>
   		</div>
 		</footer>
