--- a/themes/hugobricks/layouts/partials/people.html
+++ b/themes/hugobricks/layouts/partials/people.html
@@ -3,10 +3,15 @@
     {{- range (index (index page.Site.Data page.Site.Language.Lang) .kind) -}}
         <li>
             <div class="box">
-            <img src="{{ .image }}" alt="{{ .name }}" class="avatar colorize_image" />
-            <h3>{{- .name -}}</h3>
+            <img src="{{ .image }}" alt="{{ .name }} {{.surname }}" class="avatar" />
+            <h3><span class="highlight">{{- .name -}}</span><br/>
+            <span class="highlight">{{- .surname -}}</span></h3>
+            {{- if .function -}}
             <div class="function">{{- .function | safeHTML -}}</div>
-            <p>{{- .description | safeHTML -}}</p>
+            {{- end -}}
+            {{- if .description -}}
+              <p>{{- .description | safeHTML -}}</p>
+            {{- end -}}
             <ul class="buttons">
                 {{- if .phone -}}
                     <li><a href="tel:{{ replace .phone ` ` `` }}" class="button icon"><img src="/img/phone.svg" alt="{{ .phone }}" /></a></li>
