--- a/themes/hugobricks/static/css/base.css
+++ b/themes/hugobricks/static/css/base.css
@@ -11,7 +11,7 @@
 img {filter: grayscale(100%);}
 
 * {padding: 0; margin: 0; box-sizing: border-box;}
-html {font-size: clamp(14px, 2vw, 16px); line-height: 1.7; height: 100%; scroll-behavior: smooth; background: var(--light); scroll-padding-top: 10rem;}
+html {font-size: clamp(14px, 2vw, 16px); line-height: 1.1; height: 100%; scroll-behavior: smooth; background: var(--light); scroll-padding-top: 10rem;}
 body {font-size: 1.3rem; background: var(--light);}
 .innerbody {margin: 0 auto; background: white;}
 .innerbody, .innerbody header {max-width: 100%;}
@@ -257,17 +257,28 @@ a[href]:hover .img img {transform: scale(1.075);}
 /* avatar
 /*------------------------*/
 
-.avatar {border-radius: 100%; object-fit: cover; filter: grayscale(100%);}
+.avatar {border-radius: 100%; object-fit: cover;}
 
 /*------------------------*/
 /* people
 /*------------------------*/
 
 ul.people li {text-align: center;}
-ul.people li .box {height: 100%; padding: 2.25rem clamp(2rem, 4vw, 3.5rem);}
-ul.people li .avatar {height: 8rem; width: 8rem; margin: 0.5rem auto 0.15rem;}
-ul.people li .function {color: var(--textDark); margin: -0.25rem 0 1.5rem;}
+ul.people li .box {height: 100%; padding: 2.25rem clamp(2rem, 4vw, 3.5rem); max-width: 20rem;}
+ul.people li .avatar {height: 11rem; width: 11rem; margin: 0.5rem auto 0.15rem;}
+ul.people li .function {color: var(--textDark); font-size: smaller;}
 ul.people ul.buttons {justify-content: center;}
+
+ul.people {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  margin: 0;
+  padding-bottom: 1rem;
+}
+
 
 /*------------------------*/
 /* tabs
@@ -455,3 +466,19 @@ details[open]:not(.closing) summary::after {
 .meta ul li::before {content: ","; margin-right: 0.4rem;}
 .meta ul li:first-child:before {content: none;}
 
+
+
+
+
+h1, h2, h3, h4 {font-weight: normal;}
+.title {background: var(--accentDarker); color: white !important;}
+.title h1, .title ul.breadcrumbs li::before, .title ul.breadcrumbs li a {color: white;}
+
+.highlight {
+	background-color: #cd5c5c66;
+	font-family: inherit;
+	font-size: inherit;
+	font-weight: bold;
+	border-radius: 2rem;
+	padding: 0.2rem 1rem;
+}
