--- a/themes/hugobricks/static/css/bricks.css
+++ b/themes/hugobricks/static/css/bricks.css
@@ -115,7 +115,7 @@ section.error404 > .container.small h1 {font-size: 2.4rem;}
 /*----------------cta--------*/
 
 section.reviews .container.small {margin-bottom: 4.25rem; text-align: center;}
-ul.reviews li div.box {display: flex; flex-direction: column-reverse; padding: 2.25rem 2rem; height: 100%; justify-content: space-between; gap: 2rem;}
+ul.reviews li div.box {display: flex; flex-direction: column; padding: 2.25rem 2rem; height: 100%; justify-content: space-between; gap: 2rem;}
 ul.reviews li div.box .avatar {height: 3.25rem; width: 3.25rem;}
 ul.reviews li div.box h3 {margin: 0; line-height: 1.45; font-size: 1.1rem; padding: 0;}
 ul.reviews li div.box .function {color: var(--textDarker); line-height: 1.45;}
